add query & console cmd